Update singer repo + swagger for singer
